# goose

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  app.cc  app.h  conanfile.py  imgui.ini  lib.h  main.cc  tests.cc
include/: camera.h  draw.h  gsmath.h  shaders.h  utils.h  window.h
include/core/: app.h  camera.h  colors.h  draw.h  shaders.h  textures.h  truetype.h  utils.h  window.h
shaders/: empty.glsl  font_fragment.glsl  font_vertex.glsl  fragment_gradient.glsl  gradient_triangle.glsl  orange_triangle.glsl  primitive_fragment.glsl  primitive_vertex.glsl  vertex_gradient.glsl  yellow_triangle.glsl
src/: camera.cc  draw.cc  shaders.cc  utils.cc  window.cc
src/app/: cumin.cc  cumin.h
src/core/: camera.cc  draw.cc  gsmath.cc  image.cc  shaders.cc  textures.cc  utils.cc  window.cc
